@@ -1,9 +1,6 @@
 <h3>PIREPs List</h3>
 <p><?=$descrip;?></p>
 <?php
-//<p><a id="dialog" class="jqModal" href="action.php?admin=addaircraft">Add an aircraft</a></p>
-?>
-<?php
 if(!$pireps)
 {
 	echo '<p>No reports have been found</p>';
@@ -13,6 +10,7 @@ if(!$pireps)
 <table id="tabledlist" class="tablesorter">
 <thead>
 <tr>
+	<th>Pilot</th>
 	<th>Flight Number</th>
 	<th>Departure</th>	
 	<th>Arrival</th>
@@ -27,11 +25,12 @@ foreach($pireps as $report)
 {
 ?>
 <tr>
-	<td align="center"><?=$report->code . $reports->flightnum; ?></td>
+	<td align="center"><a id="dialog" class="jqModal" href="action.php?admin=viewpilots&action=viewoptions&pilotid=<?=$report->pilotid;?>"><?=$report->firstname .' ' . $report->lastname?></a>
+	<td align="center"><?=$report->code . $report->flightnum; ?></td>
 	<td align="center"><?=$report->depicao; ?></td>
 	<td align="center"><?=$report->arricao; ?></td>
 	<td align="center"><?=$report->flighttime; ?></td>
-	<td align="center"><?=$report->submitted; ?></td>
+	<td align="center"><?=$report->submitdate; ?></td>
 	<td align="center">
 	  <a id="dialog" class="jqModal" href="action.php?admin=addcomment&pirepid=<?=$report->id;?>">Add Comment</a>
 	</td>
