@@ -6,7 +6,8 @@ Next Build -
 
   * About page in Admin Panel
   * Definition lists heights evened out
-
+  * PIREP list view enhancements
+  * "New Version" available message, fixed to show only on main page
 
 
 Build 258 - 03/31/2008
